...
        android:layout_weight="3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LpCalculatorTextPlayer1Lp"
            style="@style/Text.PlayerLp"
            tools:text="999999" />

        <Button
            android:id="@+id/LpCalculatorButtonTurn"
            style="@style/Button.Function"
            android:maxLines="2"
            android:text="@string/turn"
            android:textSize="14sp"
            tools:text="TURN\n99" />

        <TextView
            android:id="@+id/LpCalculatorTextPlayer2Lp"
            style="@style/Text.PlayerLp"
            tools:text="999999" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/focuStealer"
...
        android:layout_weight="3"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/LpCalculatorTextPlayer1Name"
            style="@style/Text.PlayerName"
            tools:text="PLAYER NAME" />

        <TextView
            android:id="@+id/LpCalculatorTextEnteredValue"
            style="@style/Text.LpInput"
            tools:text="999999"/>

        <EditText
            android:id="@+id/LpCalculatorTextPlayer2Name"
            style="@style/Text.PlayerName"
            tools:text="PLAYER NAME" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LpCalculatorButtonPlusPlayer1"
            style="@style/Button.Plus"
            android:text="@string/plusSign"
            />

        <Button
            android:id="@+id/LpCalculatorButtonDice"
            style="@style/Button.Function"
            android:text="@string/diceRoll"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/LpCalculatorButtonPlusPlayer2"
            style="@style/Button.Plus"
            android:text="@string/plusSign"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LpCalculatorButtonMinusPlayer1"
            style="@style/Button.Minus"
            android:text="@string/minusSign"
            />

        <Button
            android:id="@+id/LpCalculatorButtonCoin"
            style="@style/Button.Function"
            android:text="@string/coinFlip"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/LpCalculatorButtonMinusPlayer2"
            style="@style/Button.Minus"
            android:text="@string/minusSign"
            />
    </LinearLayout>

    <LinearLayout
...
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        tools:ignore="HardcodedText">

        <Button
            android:id="@+id/LpCalculatorButton4"
            style="@style/Button.Number"
            android:tag="4"
            android:text="4"
            />

        <Button
            android:id="@+id/LpCalculatorButton5"
            style="@style/Button.Number"
            android:tag="5"
            android:text="5"
            />

        <Button
            android:id="@+id/LpCalculatorButton6"
            style="@style/Button.Number"
            android:tag="6"
            android:text="6"
            />
    </LinearLayout>

...
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        tools:ignore="HardcodedText">

        <Button
            android:id="@+id/LpCalculatorButton1"
            style="@style/Button.Number"
            android:tag="1"
            android:text="1"
            />

        <Button
            android:id="@+id/LpCalculatorButton2"
            style="@style/Button.Number"
            android:tag="2"
            android:text="2"
            />

        <Button
            android:id="@+id/LpCalculatorButton3"
            style="@style/Button.Number"
            android:tag="3"
            android:text="3"
            />
    </LinearLayout>

...
            style="@style/Button.Number"
            android:tag="0"
            android:text="0"
            />

        <Button
            android:id="@+id/LpCalculatorButton00"
            style="@style/Button.Number"
            android:tag="00"
            android:text="00"
            />

        <Button
            android:id="@+id/LpCalculatorButton000"
            style="@style/Button.Number"
            android:tag="000"
            android:text="000"
            />
    </LinearLayout>

...
            android:id="@+id/LpCalculatorButtonCalc"
            style="@style/Button.Function"
            android:text="@string/calc"
            android:textSize="14sp" />

        <Button
            android:id="@+id/LpCalculatorButtonClear"
            style="@style/Button.Function"
            android:text="@string/clear"
            android:textSize="14sp" />

        <Button
            android:id="@+id/LpCalculatorButtonReset"
            style="@style/Button.Function"
            android:text="@string/reset"
            android:textSize="14sp" />

        <Button
            android:id="@+id/LpCalculatorButtonUndo"
            style="@style/Button.Function"
            android:text="@string/undo"
            android:textSize="14sp" />
    </LinearLayout>


...
